<resources>
    <string name="app_name">IOCalc</string>
    <string name="action_settings">Settings</string>
    <string name="num_converter">Bin To Hex</string>
    <string name="mips_converter">MIPS Converter</string>
    <string name="numconv_title">Base Number Converter</string>
    <string name="hextostr_title">Hex to String</string>
    <string name="decimal">Decimal</string>
    <string name="binary">Binary</string>
    <string name="hex">Hexadecimal</string>
    <string name="oct">Octal</string>
    <string name="wrong">Wrong Input!</string>
    <string name="bin_settings">Format Binary Number</string>
    <string name="compl2">Two\'s Compliment</string>
    <string name="compl1">One\'s Compliment</string>
    <string name="codbin_title">Binary Number Encoding</string>
    <string name="formatbin_descr">Format the binary number in groups of 4 digits</string>
    <string name="codbin_descr">Select your preferred binary encoding option</string>
    <string name="instruction">Instruction</string>
    <string name="values">Values</string>
    <string name="action_about">About</string>
    <string name="io"><u>Alessandro Sperotti</u></string>
    <string name="ratetitle">Rate this app!</string>
    <string name="ratenow">Rate Now!</string>
    <string name="rateno">No, thanks</string>
    <string name="ratelater">Later</string>
    <string name="ratemex">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thank you for your support!</string>
    <string name="aboutdesign">Designed and Developed by Alessandro Sperotti</string>
    <string name="ratebutton">Rate app</string>
    <string name="secret">Secret Message!</string>
    <string name="visitwebsite">Visit Website</string>
    <string name="copy">Copy Text</string>
    <string name="unsigned">Unsigned</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="strn">String</string>

</resources>
