<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:text="IOCalc 1.0.0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:fontFamily="sans-serif"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="129dp"
        android:src="@drawable/about"
        android:id="@+id/imageView"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.13"
        android:adjustViewBounds="true" />

    <TextView
        android:text="@string/aboutdesign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:id="@+id/textView9" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_weight="0.03">

        <Button
            android:text="@string/visitwebsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/website"
            android:layout_weight="1" />

        <Button
            android:text="@string/ratebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rateapp"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>