<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBackGround">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

    <TextView
        android:text="@string/numconv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:textStyle="normal|bold"
        android:textSize="16sp"
        />


    <LinearLayout
        android:id="@+id/mainCard"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/white"
        android:layout_below="@+id/textView"
        android:layout_centerInParent="true"
        android:elevation="5dp"
        >

        <TextView
            android:text="@string/decimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textStyle="normal|bold"
            android:textColor="@color/colorAccent"

            android:textSize="15sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/decimal"
            android:textSize="16sp"
            android:singleLine="true"
            android:inputType="numberSigned"
            android:hint="1720"
            android:maxLength="31"/>



        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#80000000"
            android:layout_marginTop="15dp"
            />

        <TextView
            android:text="@string/binary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textStyle="normal|bold"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="20dp"
            android:textSize="15sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/binary"
            android:textSize="16sp"
            android:singleLine="true"
            android:inputType="numberDecimal"
            android:hint="0110 1011 1000"
            android:maxLength="35"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#80000000"
            android:layout_marginTop="15dp"
            />

        <TextView
            android:text="@string/hex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textStyle="normal|bold"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="20dp"
            android:textSize="15sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/hex"
            android:textSize="16sp"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:hint="6B8"
            android:maxLength="31"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#80000000"
            android:layout_marginTop="15dp"
            />

        <TextView
            android:text="@string/oct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:textStyle="normal|bold"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="20dp"
            android:textSize="15sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/oct"
            android:textSize="16sp"
            android:singleLine="true"
            android:inputType="numberSigned"
            android:hint="3270"
            android:maxLength="31"/>



    </LinearLayout>
    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/clearBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="32dp"
        android:src="@drawable/ic_clear"
        app:layout_anchor="@id/mainCard"
        app:layout_anchorGravity="bottom|right|end"/>

</android.support.design.widget.CoordinatorLayout>