<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBackGround">

    <TextView
        android:text="@string/hextostr_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:textStyle="normal|bold"
        android:textSize="16sp" />



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/white"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:elevation="10dp"
        >

        <TextView
            android:text="@string/hex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textStyle="normal|bold"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:textSize="15sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/hexEdt"
            android:textSize="16sp"
            android:singleLine="true"
            android:hint="1720"
            android:layout_marginLeft="10dp"
            android:maxLength="31"/>



        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#80000000"
            android:layout_marginTop="15dp"
            />

        <TextView
            android:text="@string/strn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textStyle="normal|bold"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:textSize="15sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/strEdt"
            android:textSize="16sp"
            android:singleLine="true"
            android:inputType="text"
            android:hint="0110 1011 1000"
            android:layout_marginLeft="10dp"
            android:maxLength="35"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#80000000"
            android:layout_marginTop="15dp"
            />
    </LinearLayout>
</LinearLayout>